fix: remove z-index

--- a/src/components/CreateBoardBar/CreateBoardBar.scss
+++ b/src/components/CreateBoardBar/CreateBoardBar.scss
@@ -9,7 +9,6 @@ $bar-controls-height: 28px;
 
 .create-board__input {
   position: relative;
-  z-index: 2;
   margin-left: 5px;
   padding: 5px 10px;
   height: $bar-controls-height;
